--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-
-lkfe.mlkñdmndsjkdslñds
-dsdsffdsdfs
+<html>
+  <head>
+    </head>
+  <body>
+    <h1>
+      Hola Mundo
+    </h1>
+  </body>
+  </html>
