--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-  <head> <title> Esta es mi Pagina de Prueba</title> </head>
+  <head> <title> Esta es mi Pagina de Prueba</title> 
+  
+  </head>
   <body>
     <h1>
       Hola Mundo
