Modificado por raul
este archivo fue modificado por raul

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-  <head> <title> Esta es mi Pagina de Prueba</title> 
-  
+  <head> 
+    <title> Pagina | Inicio </title> 
   </head>
-  <body>
+  
+<body>
     <h1>
       Hola Mundo
     </h1>
